changement nom pour tests

--- a/study-hub/apache_mysql_php/study-hub.yaml
+++ b/study-hub/apache_mysql_php/study-hub.yaml
@@ -1,4 +1,4 @@
-name: Environnement PHP
+name: Environnement PHP LP
 author: Cyrhades
 description: Environnement LAMP, Apache / MySQL / PHP / PhpMyAdmin
 concern: development
