--- a/study-hub/nodejs_mongodb/study-hub.yaml
+++ b/study-hub/nodejs_mongodb/study-hub.yaml
@@ -1,3 +1,3 @@
-name: Environnement NodeJS + MongoDB
+name: Environnement NodeJS + MongoDB Blabla
 description: Environnement NodeJS, MongoDB / MongoExpress
 concern: development
