--- a/study-hub/nodejs_mysql/study-hub.yaml
+++ b/study-hub/nodejs_mysql/study-hub.yaml
@@ -1,3 +1,3 @@
-name: Environnement NodeJS + MySQL
+name: Environnement NodeJS + MySQL Cool
 description: Environnement NodeJS, MySQL / PhpMyAdmin
 concern: development
